# stave

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  NOTES.md  Stave.side  database.bak  database.sql  docker-compose.dev.yml  flake.nix  justfile  manage.py  mvp.md  prek.toml  pyproject.toml
.devcontainer/: devcontainer.env  devcontainer.json
.github/workflows/: test.yml
docker/: entrypoint.sh
docs/: Caddyfile  Dockerfile  book.toml
docs/src/: SUMMARY.md  about.md  age-restrictions.md  age_restrictions.md  application-lifecycle.md  applying.md  build-events-and-forms.md  build_events_and_forms.md  calendars.md  code_of_conduct.md  contributors.md  funding_and_support.md  key_concepts.md  league-getting-started.md  league-management.md  league_getting_started.md  league_management.md  license.md  llm-generative-ai-policy.md  messaging.md  policies.md  privacy-policy.md  privacy_policy.md  sign_up.md  signing-up-and-logging-in.md  staffing.md  subscriptions.md  support-maintenance-and-funding.md
features/: README.md  admin_login.feature  environment.py  user_dashboard.feature
features/steps/: admin_login.py  user_dashboard.py
static/: stave.css
stave/: admin.py  apps.py  asgi.py  assignment.email  avail.py  calendars.py  emails.py  fluent_bundles.py  forms.py  ftl_bundles.py  invitation.email  jobs.py  middleware.py  models.py  rejection.email  settings.py  test_models.py  urls.py  views.py  wsgi.py
stave/migrations/: 0001_initial.py  0002_alter_rolegroupcrewassignment_crew.py  0002_league_slug_question_content_question_options_and_more.py  0003_question_other_only_for_multi.py  0003_remove_rolegroup_requires_profile_fields_and_more.py  0004_alter_crewassignment_user_and_more.py  0004_remove_question_only_one_relation_and_more.py  0005_alter_applicationresponse_options_and_more.py  0005_alter_role_options_role_order_key_and_more.py  0006_league_description_league_logo_league_website_and_more.py  0006_role_unique_order_key.py  0007_alter_league_options_league_unique_slug.py  0007_leagueuserrole_role_alter_leagueuserrole_league_and_more.py  0008_game_name_game_order_key.py  0008_leagueuserpermission_delete_leagueuserrole.py  0009_alter_applicationform_options_alter_league_slug_and_more.py  0009_game_unique_order_key_event.py  0010_alter_game_options_alter_application_event_and_more.py  0010_league_location.py  0011_alter_game_event_alter_role_role_group.py  0011_applicationform_close_date_applicationform_closed.py  0012_remove_eventrole_event_alter_roleassignment_role_and_more.py  0012_remove_game_role_groups_and_more.py  0013_remove_event_crew_and_more.py  0014_remove_crew_is_override_crew_kind.py  0015_crew_name.py  0016_alter_rolegroupcrewassignment_crew_overrides_and_more.py  0017_leaguetemplate_rolegroup_league_and_more.py  0018_alter_event_managers_event_status_league_enabled_and_more.py  0019_alter_event_managers_user_legal_name.py  0020_user_league_affiliation.py  0021_application_invitation_email_sent_and_more.py  0023_alter_user_email.py  (+55 more)
tests/: conftest.py  factories.py  test_avail.py  test_factories.py  test_localization.py  test_models.py  test_views.py
(+88 files in other folders)
