[project]
name = "stave"
version = "0.1.0"
description = "Official and volunteer signups for roller derby events"
readme = "README.md"
license = "AGPL-3.0"
classifiers = [
    "Private :: Do Not Upload",  # prevent project from being uploaded to PyPI
]
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.4",
    "django-allauth[mfa,socialaccount]>=65.3.1",
    "django-htmx>=1.21.0",
    "pillow>=11.1.0",
    "django-markdownify>=0.9.5",
    "django-types>=0.20.0",
    "django-stubs-ext>=5.1.2",
    "django-template-partials>=24.4",
    "python-dotenv>=1.0.1",
    "dj-database-url>=2.3.0",
    "django-ical>=1.9.2",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "django-apscheduler>=0.7.0",
    "whitenoise>=6.9.0",
    "sentry-sdk[django]>=2.24.0",
    "django-anymail[amazon-ses]>=13.0",
    "django-meta>=2.5.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=5.2.0",
    "django-extensions>=3.2.3",
    "pytest-django>=4.11.1",
]

[tool.basedpyright]
venv = ".venv"
reportUnannotatedClassAttribute = false
reportImplicitOverride = false
reportUninitializedInstanceVariable = false
reportExplicitAny = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "stave.settings"
