[project]
name = "stave"
version = "0.1.0"
description = "Official and volunteer signups for roller derby events"
readme = "README.md"
license = "AGPL-3.0"
classifiers = [
    "Private :: Do Not Upload",  # prevent project from being uploaded to PyPI
]
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.4,<6",
    "django-allauth[mfa,socialaccount]>=65.3.1",
    "django-htmx>=1.21.0",
    "pillow>=11.1.0",
    "django-markdownify>=0.9.5",
    "django-types>=0.20.0",
    "django-stubs-ext>=5.1.2",
    "django-template-partials>=24.4",
    "python-dotenv>=1.0.1",
    "dj-database-url>=2.3.0",
    "django-ical>=1.9.2",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "django-apscheduler>=0.7.0",
    "whitenoise>=6.9.0",
    "sentry-sdk[django]>=2.24.0",
    "django-anymail[amazon-ses]>=13.0",
    "django-meta>=2.5.0",
    "django-ftl>=0.14",
    "django-storages[s3]>=1.14.6",
]

[dependency-groups]
dev = [
    "behave-django>=1.7.0",
    "django-debug-toolbar>=5.2.0",
    "django-extensions>=3.2.3",
    "pytest-django>=4.11.1",
    "factory-boy>=3.3.3",
    "pytest-factoryboy>=2.8.1",
    "prek>=0.3.2",
    "ruff>=0.15.0",
    "editorconfig-checker>=3.6.0",
    "coverage>=7.13.3",
    "django-coverage-plugin>=3.2.0",
]

[tool.coverage.run]
branch = true
omit = [
    "*/migrations/*",  # logic may not always apply for data migrations
]
parallel = true
plugins = [
    "django_coverage_plugin",  # template coverage
]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "stave.settings"

[tool.uv]
# behave-django 1.7.0 relies on a prerelease version of behave
# Remove this once behave-django updates to a stable release with behave 1.3.x
# See https://github.com/behave/behave-django/pull/172
prerelease = "if-necessary"
